# diff_base

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_tests.py  test_reorganization.py
benchmarks/flux_kontext_scalability/: README.md  gpu_metrics_recorder.sh  parse_metrics_csv.py  plot_scaling_results.py  scal_lora_template.yaml  slurm_4gpu.sbatch  submit_rank_sweep.sh  submit_scal_sweep.sh  train_wrapper.sh
configs/experiments/: _smoke_kontext_lora_orion.yaml  flux1_kontext_lora_example.yaml  sdxl_lora_example.yaml
configs/models/: flux.yaml  flux1_dev.yaml  flux1_kontext.yaml  flux1_schnell.yaml  flux2_dev.yaml  flux2_klein_4b.yaml  flux2_klein_9b.yaml  sd3_large.yaml  sd3_large_turbo.yaml  sd3_medium.yaml  sdxl.yaml
configs/training/: controlnet.yaml  dreambooth.yaml  full_finetune.yaml  kontext_finetune.yaml  kontext_lora.yaml  lora.yaml  textual_inversion.yaml
docs/: ai_toolkit_audit.md  flux2_audit.md  full_finetune_recipes.md  pretrained_weights_inventory.md
proposals/kempner_2026/: 01_code_links.md  02_frameworks_software.md  03_external_apis.md  05_gpu_type.md  07_storage_needs.md  08_technical_expertise.md  09_deliverables.md  README.md  aims_3_4_report.md  aims_3_4_scientific_content.md  final_proposal.md
scripts/: download_pretrained_weights.sh  finetune_flux.py  inference.py  train.py
src/: __init__.py
src/data/: __init__.py  bucket.py  cache.py  collate.py  dataset.py  dreambooth_dataset.py  kontext_collate.py  kontext_dataset.py  orion_dataset.py  paired_kontext_base.py  transforms.py
src/inference/: __init__.py  flux1_editing_pipeline.py  flux2_editing_pipeline.py  pipeline.py
src/models/: __init__.py  base.py
src/schedulers/: __init__.py  ddpm.py  euler.py  flow_matching.py
tests/: __init__.py  test_accelerator_integration.py  test_alignment_verification.py  test_bfl_export.py  test_config.py  test_data.py  test_ema.py  test_finetune_flux_cli.py  test_flow_matching_alignment.py  test_flux1_alignment.py  test_flux1_editing_pipeline.py  test_flux1_hf_alignment.py  test_flux1_kontext.py  test_flux1_kontext_dataset.py  test_flux1_kontext_trainer.py  test_flux1_weight_loading.py  test_flux2_editing.py  test_flux2_text_encoder.py  test_flux2_weight_loading.py  test_flux_full_finetune_trainer.py  test_fsdp_setup.py  test_lora_checkpoint_slim.py  test_memory_planning.py  test_model_training_inputs.py  test_models.py  test_orion_dataset.py  test_schedulers.py  test_text_embedding_cache.py  test_train_script_regression.py  test_training.py
(+105 files in other folders)
